#summary Changelog for all changes since the fork

= Changes =
== Version 1.22 ==
  * Fixed not-working "mark as unread" menu entry
  * Ignore specific SSLExceptions which often occur on bad connections

== Version 1.21 ==
  * Fixed wrong handling of Usage-options
  * Trying to fix ActivityNotFoundExceptions which affected some users
  * Added preference for "Inject Article-Link"

== Version 1.2 ==
  * Added compatibility-code for Android 4.0 (API-Level 14)
  * Started working on a thre-pane-layout for tablet-devices (not functional yet)
  * Fixed Issue #80: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=80 Broken list in JSON request])
  * Fixed Enhancement #77: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=77 Support lazy servers (no cron job for fetching feeds)])
  * Fixed Enhancement #79: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=79 Inject a link to the web article at the end of the RSS article])
  * Minor bugfixes and refactoring

== Version 1.12 ==
  * Added dialogs to preferences which allow to change the Cache-Folder and the download-location for attached Media-Files

== Version 1.11 ==
  * Modified background-refresh of displayed content, empty lists should not happen anymore (or at least not so often)
  * Changed link-color for dark theme, links are now red and readable on dark background.
  * Added connection-timeouts (5 seconds for connection, 8 seconds for receiving any data) to avoid endless running jobs.

== Version 1.1 ==
  * Added display-preference for dark-background and white text
  * Added preference "Start ImageCache only on Wifi", which prevents the automatically scheduled ImageCache to run on a mobile connection
  * Fixed bug: Error in case of disabled-API

== Version 1.09 (2) ==
  * Vibrate when last article is reached, not only when trying to move further
  * Changed buttons and layout for article-browsing
  * Added left-hand-mode for landscape display