@@ -4,6 +4,7 @@
 == Version 1.22 ==
   * Fixed not-working "mark as unread" menu entry
   * Ignore specific SSLExceptions which often occur on bad connections
+  * Added check for http status code "401 Unauthorized"
 
 == Version 1.21 ==
   * Fixed wrong handling of Usage-options
